[tool.poetry]
name = "scvelo"
version = "0.1.0"
description = "RNA velocity generalized through dynamical modeling"
authors = ["Jonathon Chow"]
readme = "README.md"
packages = [{include = "scvelo"}]

[tool.poetry.dependencies]
python = "3.10.10"
jupyter = "1.0.0"
anndata = "0.10.3"
scanpy = "1.9.6"
loompy = "3.0.7"
umap-learn = "0.5.5"
numba = "0.58.1"
numpy = "1.26.2"
pandas = "2.1.4"
scipy = "1.11.4"
scikit-learn = "1.1.3"
scvi-tools = "1.0.4"
matplotlib = "3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
